@@ -1,10 +1,13 @@
 # -*- coding: utf-8 -*-
-import ez_setup
-ez_setup.use_setuptools()
+try:
+    from setuptools import setup, find_packages
+except ImportError:
+    import ez_setup
+    ez_setup.use_setuptools()
+    from setuptools import setup, find_packages
 
 import os
 import sys
-from setuptools import setup, find_packages
 from distutils import log
 
 import sphinx
