@@ -135,6 +135,17 @@ Release 1.0 (in development)
 Release 0.6.6 (in development)
 ==============================
 
+* #409: Make the ``highlight_language`` config value work properly
+  in the LaTeX builder.
+
+* #418: Allow relocation of the translation JavaScript files to
+  the system directory on Unix systems.
+
+* #414: Fix handling of Windows newlines in files included with
+  the ``literalinclude`` directive.
+
+* #377: Fix crash in linkcheck builder.
+
 * #387: Fix the display of search results in ``dirhtml`` output.
 
 * #376: In autodoc, fix display of parameter defaults containing
